--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
    #     dotnet-version: 5.0.17
 
     - name: Restore NuGet packages
-      run: nuget restore NewRTEngine.sln
+      run: nuget restore VivDOS.sln
 
     - name: Build solution
       run: msbuild /p:Configuration=Release VivDOS.sln
