the fuck is going on?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,8 @@ jobs:
     - name: Restore NuGet packages
       run: nuget restore VivDOS.sln
 
+    - name: Check directory
+      run: dir
+
     - name: Build solution
       run: msbuild /p:Configuration=Release VivDOS.sln
