--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         git clone https://github.com/CosmosOS/Cosmos.git --depth 1
         cd Cosmos
+        dir
         .\install-VS2022.cmd
       shell: pwsh
 
